--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html>
 
 <head lang="en">
-    <base href = "/">
+    <base href="/">
     <title>Acme Product Management</title>
     <meta charset="UTF-8">
     <link href="app/css_folder/bootstrap.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--
+    <!--
     <link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />-->
-     
+
     <!--<link href="app/app.component.scss"  rel='stylesheet' type='text/css' />-->
-    <link href="app/css_folder/app.css"  rel='stylesheet'/>
- 
+    <link href="app/css_folder/app.css" rel='stylesheet' />
+
 
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
@@ -23,14 +23,22 @@
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
+    <!--<script type="text/javascript" src="node_modules/crypto-js/crypto-js.js"></script>-->
     <!-- Configure SystemJS -->
     <script src="systemjs.config.js"></script>
     <script>
-      System.import('app').catch(function(err){ console.error(err); });
+        System.import('app').catch(function (err) { console.error(err); });
     </script>
 </head>
 
 <body>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Online Exam System</a>
+            </div>
+        </div>
+    </nav>
     <pm-app> Loading ...</pm-app>
 </body>
 
